[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/notification.properties
+++ b/pt-BR/suite/chrome/common/notification.properties
@@ -51,6 +51,8 @@ pluginInfo.unknownPlugin=Desconhecido
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName and #2 is the number of popups blocked.
 popupWarning.message=O #1 preveniu este site de abrir uma janela de popup.;O #1 preveniu que este site abrisse #2 janelas de popup.
+popupWarningButton=Preferências
+popupWarningButton.accesskey=P
 
 xpinstallHostNotAvailable=host desconhecido
 xpinstallPromptWarning=%S previniu que este site (%S) perguntasse se deseja instalar programas no seu computador.
@@ -97,6 +99,7 @@ addonErrorIncompatible=O #1 não pôde ser instalado por não ser compatível co
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
 lwthemeInstallRequest.message=Este site (%S) tentou instalar um tema. Clique em aceitar para continuar.
+lwthemeInstallRequest.allowButton=Permitir
 lwthemeInstallRequest.allowButton.accesskey=P
 
 lwthemeInstallNotification.message=Um novo tema foi instalado.
@@ -157,6 +160,7 @@ offlineApps.never=Nunca para este site
 offlineApps.never.accesskey=e
 
 # Block autorefresh
+refreshBlocked.goButton=Permitir
 refreshBlocked.goButton.accesskey=A
 refreshBlocked.refreshLabel=O %S impediu esta página de recarregar automaticamente.
 refreshBlocked.redirectLabel=O %S impediu esta página de redirecionar automaticamente para outra página.
