--- a/pt-BR/suite/chrome/common/pref/prefutilities.properties
+++ b/pt-BR/suite/chrome/common/pref/prefutilities.properties
@@ -7,7 +7,7 @@ cachefolder=Selecione a pasta do cache:
 cacheSizeInfo=Seu cache está usando %1$S %2$S de espaço em disco.
 
 # Offline apps
-offlineAppSizeInfo=Seu armazenamento em modo desconectado está usando $S %2$S de espaço em disco.
+offlineAppSizeInfo=Seu armazenamento em modo desconectado está usando %1$S%2$S de espaço em disco.
 offlineAppRemoveTitle=Excluir dados de sites em modo desconectado
 offlineAppRemovePrompt=Após excluir estes dados, o %S não estará mais disponível para uso em modo desconectado. Deseja excluir este site em modo desconectado?
 offlineAppRemoveConfirm=Excluir dados de sites em modo desconectado
