[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/browser/navigator.properties
+++ b/pt-BR/suite/chrome/browser/navigator.properties
@@ -32,6 +32,7 @@ tabs.close.accesskey=F
 
 tabs.recentlyClosed.format=%1$S %2$S
 
+windows.recentlyClosed.format=%1$S %2$S
 
 tabs.closeWarningTitle=Fechar janela
 tabs.closeWarning=Esta janela possui %S abas. Deseja fechá-las?
