[suite] Updating translation

--- a/pt-BR/suite/chrome/common/notification.properties
+++ b/pt-BR/suite/chrome/common/notification.properties
@@ -16,11 +16,14 @@ carbonfailurepluginsMessage.button.label=Reiniciar em modo de 32 bits
 carbonfailurepluginsMessage.button.accesskey=R
 
 missingpluginsMessage.title=Plugins adicionais são requeridos para exibir todo conteúdo de mídia desta página.
+missingpluginsMessage.button.label=Instalar plugins que faltam…
+missingpluginsMessage.button.accesskey=I
 
 blockedpluginsMessage.title=Alguns plugins requeridos por esta página foram bloqueados para sua proteção.
 blockedpluginsMessage.infoButton.label=Detalhes…
 blockedpluginsMessage.infoButton.accesskey=D
-
+blockedpluginsMessage.searchButton.label=Atualizar plugins…
+blockedpluginsMessage.searchButton.accesskey=u
 crashedpluginsMessage.title=O plugin %S travou.
 crashedpluginsMessage.reloadButton.label=Recarregar página
 crashedpluginsMessage.reloadButton.accesskey=R
@@ -180,10 +183,8 @@ updatePromptCheckButton.accesskey=V
 SecurityTitle=Alerta de segurança
 MixedContentMessage=Você requisitou uma página criptografada que contém algumas informações não criptografadas. As informações que você visualizar ou publicar nesta página poderão ser facilmente lidas por terceiros.
 MixedActiveContentMessage=Você requisitou uma página criptografada que contém informações inseguras. As informações que você visualizar ou publicas nesta página poderão ser facilmente lidas por terceiros.
-TrackingContentMessage=Partes deste página podem estar rastreando suas atividades online.
 MixedDisplayContentMessage=Você requisitou uma página que está parcialmente criptografada e não previne a espionagem.
 BlockedActiveContentMessage=Informação insegura desta página foi bloqueada.
-BlockedTrackingContentMessage=Partes da página que rastreiam suas atividades on-line foram bloqueadas.
 BlockedDisplayContentMessage=Informações descriptogradas nesta página foram bloqueadas.
 EnterInsecureMessage=Você saiu de uma página criptograda. As informações que você enviar ou receber a partir de agora podem ser facilmente lidas por terceiros.
 EnterSecureMessage=Você requisitou uma página criptografada. O site identificou-se corretamente e as informações que você visualizar ou publicar nesta página não poderão ser facilmente lidas por terceiros.
