--- a/pt-BR/suite/chrome/mailnews/charsetTitles.properties
+++ b/pt-BR/suite/chrome/mailnews/charsetTitles.properties
@@ -31,6 +31,13 @@ x-mac-croatian.title    = Croata (MacCroatian)
 x-mac-romanian.title    = Romeno (MacRomanian)
 x-mac-icelandic.title   = Islandês (MacIcelandic)
 iso-2022-jp.title = Japonês (ISO-2022-JP)
+iso-2022-cn.title = Chinês Simplificado (ISO-2022-CN)
+iso-2022-kr.title = Coreano (ISO-2022-KR)
+iso-8859-11.title = Tailandês (ISO-8859-11)
+iso-8859-9.title    = Turco (ISO-8859-9)
+iso-ir-111.title = Cirílico (ISO-IR-111)
+tis-620.title = Tailandês (TIS-620)
+x-euc-tw.title = Chinês Tradicional (EUC-TW)
 shift_jis.title = Japonês (Shift_JIS)
 euc-jp.title = Japonês (EUC-JP)
 big5.title = Chinês Tradicional (Big5)
@@ -59,6 +66,7 @@ x-viet-tcvn5712.title = Vietnamita (TCVN)
 viscii.title = Vietnamita (VISCII)
 x-viet-vps.title = Vietnamita (VPS)
 windows-874.title = Tailandês (Windows-874)
+ibm874.title = Tailandês (IBM-874)
 armscii-8.title = Armênio (ARMSCII-8)
 iso-8859-6.title = Arábico (ISO-8856-6)
 iso-8859-6-i.title = Arábico (ISO-8859-6-I)
@@ -70,6 +78,11 @@ windows-1255.title = Hebraico (Windows-1255)
 windows-1256.title = Arábico (Windows-1256)
 x-user-defined.title = Definido pelo usuário
 ibm866.title = Cirílico/Russo (CP-866)
+ibm850.title = Ocidental (IBM-850)
+ibm852.title = Europeu Central (IBM-852)
+ibm855.title = Cirílico (IBM-855)
+ibm857.title = Turco (IBM-857)
+ibm862.title = Hebraico (IBM-862)
 gb18030.title = Chinês Simplificado (GB18030)
 x-mac-arabic.title = Arábico (MacArabic)
 x-mac-farsi.title = Farsi (MacFarsi)
