--- a/ja/mobile/android/chrome/browser.properties
+++ b/ja/mobile/android/chrome/browser.properties
@@ -94,7 +94,6 @@ identity.identified.state_and_country=%S, %S
 identity.identified.title_with_country=%S (%S)
 # アイコン下のラベルなので短く
 identity.encrypted2=暗号化あり
-identity.ownerUnknown3=不明
 
 # Geolocation UI
 geolocation.allow=知らせる
@@ -397,4 +396,4 @@ feedHandler.subscribeWith=配信先
 # This string is shown in the console when someone uses deprecated NativeWindow apis.
 # %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
 # a file they should import or the name of an api.
-nativeWindow.deprecated=%S は非推奨です。代わりに %S を利用してください。
+nativeWindow.deprecated=%1$S は非推奨です。代わりに %2$S を利用してください。
