--- a/ja/browser/chrome/browser/devtools/webide.properties
+++ b/ja/browser/chrome/browser/devtools/webide.properties
@@ -20,7 +20,7 @@ importHostedApp_title				= ホスト型アプリを開く
 importHostedApp_header				= マニフェスト URL を入力
 
 notification_showTroubleShooting_label		= トラブルシューティング
-notification_showTroubleShooting_accesskey	= t
+notification_showTroubleShooting_accesskey	= T
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
@@ -42,6 +42,8 @@ error_cantConnectToApp				= アプリに接続できません: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON			= アドオンの一覧を取得できません: %S
 
+error_appProjectsLoadFailed			= プロジェクトを読み込めません。新しいバージョンの Firefox のプロファイルを使用した場合に発生する可能性があります。
+
 addons_stable					= 安定
 addons_unstable					= 不安定
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
@@ -52,6 +54,7 @@ addons_simulator_label				= Firefox OS %1$S シミュレータ (%2$S)
 addons_install_button				= インストール
 addons_uninstall_button				= アンインストール
 addons_adb_label				= ADB Helper アドオン
+addons_adapters_label				= ツールアダプタアドオン
 addons_adb_warning				= このアドオンがないと、USB デバイスを検出できません
 addons_status_unknown				= ？
 addons_status_installed				= インストール済み
@@ -71,3 +74,6 @@ status_valid					= 有効
 status_warning					= 警告
 status_error					= エラー
 status_unknown					= 不明
+
+# Preferences
+devicepreferences_reset_default			= 既定値に戻す
