--- a/ja/browser/chrome/browser/shellservice.properties
+++ b/ja/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = 次回から確認しない
 setDefaultBrowserNever.accesskey   = D
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle		= 既定のブラウザ
+setDefaultBrowserMessage	= %S は現在既定のブラウザに設定されていません。既定のブラウザに設定しますか？
+setDefaultBrowserDontAsk	= %S の起動時に必ず確認する
 
 desktopBackgroundLeafNameWin	= デスクトップ Background.bmp
 DesktopBackgroundDownloading	= 画像を保存...
