--- a/ja-JP-mac/browser/chrome/browser/browser.properties
+++ b/ja-JP-mac/browser/chrome/browser/browser.properties
@@ -298,7 +298,7 @@ identity.identified.verified_by_you	= このサイトはあなたがセキュリ
 identity.identified.state_and_country	= %S, %S
 
 identity.encrypted2			= この Web サイトとの通信は安全です。
-identity.mixed_display_loaded		= この Web サイトとのすべての通信が暗号化されていません。画像などの暗号化されてない要素が含まれています。
+identity.broken_loaded			= この Web サイトとのすべての通信が暗号化されていません。画像などの暗号化されてない要素や、充分な強度で暗号化されてない要素が含まれています。
 identity.mixed_active_loaded2		= この Web サイトは、暗号化されてないスクリプトなどのインタラクティブなコンテンツが含まれています。第三者に情報を盗み見られたり、Web サイトの動作を改ざんされる可能性があります。
 identity.unencrypted			= この Web サイトとの通信は暗号化されていません。
 
