--- a/ja-JP-mac/browser/chrome/browser/devtools/gclicommands.properties
+++ b/ja-JP-mac/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,10 @@ helpDesc		= 使用可能なコマンドのヘルプを表示します
 # explain the contents of the command help table.
 helpAvailable		= 使用可能なコマンド
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+notAvailableInE10S	= コマンド '%1$S' はマルチプロセスモード (E10S) では無効です。
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc		= コンソールを操作するコマンドです
