--- a/ja-JP-mac/browser/chrome/browser/devtools/timeline.properties
+++ b/ja-JP-mac/browser/chrome/browser/devtools/timeline.properties
@@ -38,4 +38,30 @@ timeline.records	= 項目
 timeline.label.styles	= CSS
 timeline.label.reflow	= リフロー
 timeline.label.paint	= 描画
+timeline.label.javascript	= Javascript
 timeline.label.domevent	= DOM イベント
+timeline.label.consoleTime	= コンソール
+
+# LOCALIZATION NOTE (graphs.memory):
+# This string is displayed in the memory graph of the Performance tool,
+# as the unit used to memory consumption. This label should be kept
+# AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.memory=MB
+
+# LOCALIZATION NOTE (timeline.markerDetailFormat):
+# Some timeline markers come with details, like a size, a name, a js function.
+# %1$S is replaced with one of the above label (timeline.label.*) and %2$S
+# with the details. For examples: Paint (200x100), or console.time (FOO)
+timeline.markerDetailFormat=%1$S (%2$S)
+
+# LOCALIZATION NOTE (time.markerDetail.*):
+# Strings used in the waterfall sidebar.
+timeline.markerDetail.start			= 開始:
+timeline.markerDetail.end			= 終了:
+timeline.markerDetail.duration			= 期間:
+timeline.markerDetail.consoleTimerName		= タイマー名:
+timeline.markerDetail.DOMEventType		= イベント種別:
+timeline.markerDetail.DOMEventPhase		= フェーズ:
+timeline.markerDetail.DOMEventTargetPhase	= ターゲット
+timeline.markerDetail.DOMEventCapturingPhase	= キャプチャ
+timeline.markerDetail.DOMEventBubblingPhase	= バブリング
