--- a/ja-JP-mac/browser/chrome/browser/shellservice.properties
+++ b/ja-JP-mac/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = N
 setDefaultBrowserNever.label       = 次回から確認しない
 setDefaultBrowserNever.accesskey   = D
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle		= デフォルト Web ブラウザ
+setDefaultBrowserMessage	= %S は現在デフォルト Web ブラウザに設定されていません。デフォルト Web ブラウザに設定しますか？
+setDefaultBrowserDontAsk	= %S の起動時に必ず確認する
 
 desktopBackgroundLeafNameWin	= デスクトップ Background.bmp
 DesktopBackgroundDownloading	= 画像を保存...
