[sl] update from Pootle (thunderbird)

--- a/sl/editor/ui/chrome/composer/editor.properties
+++ b/sl/editor/ui/chrome/composer/editor.properties
@@ -121,7 +121,7 @@ ShowToolbar=Pokaži orodno vrstico
 HideToolbar=Skrij orodno vrstico
 ImapError=Slike ni mogoče naložiti\u0020
 ImapCheck=\nIzberite novo mesto (URL) in poskusite znova.
-SaveToUseRelativeUrl=Relativne URL-je se lahko uporablja samo straneh, ki so že shranjene
+SaveToUseRelativeUrl=Relativne URL-je se lahko uporablja samo na shranjenih straneh
 NoNamedAnchorsOrHeadings=(Na tej strani ni sider z imenom ali glav)
 TextColor=Barva besedila
 HighlightColor=Barva označenega besedila
