--- a/ja/toolkit/chrome/global/aboutTelemetry.properties
+++ b/ja/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle		= このページは、Telemetry によって収集されたパフォーマンスとハードウェア、使用状況、カスタマイズについての情報を表示します。この情報は、%2$S の改善のため %1$S に送信されます。
 
+generalDataHeadingName = 名前
+
+generalDataHeadingValue = 値
+
 slowSqlMain		= メインスレッド上の動作の遅い SQL ステートメント
 
 slowSqlOther		= ヘルパースレッド上の動作の遅い SQL ステートメント
