--- a/ja-JP-mac/toolkit/chrome/global/aboutSupport.properties
+++ b/ja-JP-mac/toolkit/chrome/global/aboutSupport.properties
@@ -82,3 +82,7 @@ webglRenderer		= WebGL レンダラ
 
 minLibVersions		= 想定される最低バージョン
 loadedLibVersions	= 使用中のバージョン
+
+hasSeccompBPF		= Seccomp-BPF (システムコールフィルタリング)
+canSandboxContent	= コンテンツプロセスサンドボックス
+canSandboxMedia		= メディアプラグインサンドボックス
