FX and toolkit l10n update

--- a/fi/browser/chrome/browser/browser.properties
+++ b/fi/browser/chrome/browser/browser.properties
@@ -295,7 +295,7 @@ identity.identified.verified_by_you=Olet lisännyt tätä sivustoa koskevan turv
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=Yhteys sivustoon on suojattu.
-identity.mixed_display_loaded=Yhteys sivustoon ei ole täysin suojattu, koska joitain sivuston osia ei ole salattu (esim. kuvat).
+identity.broken_loaded=Yhteys sivustoon ei ole täysin suojattu, koska joitain sivuston osia ei ole salattu (esim. kuvat) tai salaus ei ole riittävän vahva.
 identity.mixed_active_loaded2=Tällä sivustolla on interaktiivista sisältöä, jota ei ole salattu (esim. komentosarja). Muiden on mahdollista nähdä tietojasi tai vaikuttaa sivuston käyttäytymiseen.
 identity.unencrypted=Yhteys verkkosivustoon ei ole salattu.
 
