--- a/fi/browser/chrome/browser/loop/loop.properties
+++ b/fi/browser/chrome/browser/loop/loop.properties
@@ -97,7 +97,8 @@ new_contact_button=Uusi yhteystieto
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Nimi
 new_contact_email_placeholder=Sähköpostiosoite
-new_contact_phone_placeholder=Firefox OS -puhelin
+new_contact_fxos_phone_placeholder=Firefox OS -puhelin
+new_contact_phone_placeholder2=Puhelin
 
 contacts_blocked_contacts=Estetyt yhteystiedot
 
@@ -122,17 +123,13 @@ importing_contacts_progress_button=Tuodaan…
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Synkronoi yhteystiedot
+
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Yhteystietojen tuonti epäonnistui
-## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
-## fails and the user may need more help. In this item, don't translate the part between
-## {{..}} because this will be replaced by the label from import_failed_support_link_label.
-## This is displayed in the error field here:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Yhteystietojen tuonti epäonnistui. Lisäohjeita {{import_failed_support_link_label}}
-import_failed_support_link_label=tukisivustoltamme
+import_failed_description_some=Joitain yhteystietoja ei voitu tuoda
+import_failed_support_button=Ohje
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -256,7 +253,7 @@ connection_error_see_console_notification=Puhelu epäonnistui; katso lisätietoj
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name.
-legal_text_and_links3=Käyttämällä {{clientShortname}}ia hyväksyt sen {{terms_of_use}} \
+legal_text_and_links3=Käyttämällä {{clientShortname}} -palvelua hyväksyt sen {{terms_of_use}} \
   ja {{privacy_notice}}.
 legal_text_tos = käyttöehdot
 legal_text_privacy = tietosuojakäytännön
@@ -309,6 +306,8 @@ rooms_list_delete_tooltip=Poista keskustelu
 rooms_list_deleteConfirmation_label=Poistetaanko keskustelu?
 rooms_list_no_current_conversations=Ei avoimia keskusteluja
 rooms_name_this_room_label=Nimeä keskustelu
+rooms_name_this_room_tooltip2=Muokkaa keskustelun nimeä
+rooms_name_change_failed_label=Keskustelun nimeä ei voi muuttaa
 rooms_new_room_button_label=Aloita keskustelu
 rooms_only_occupant_label=Olet ensimmäinen paikalla.
 rooms_panel_title=Valitse keskustelu tai aloita uusi
@@ -316,4 +315,5 @@ rooms_room_full_label=Keskustelussa on jo kaksi henkilöä paikalla.
 rooms_room_full_call_to_action_nonFx_label=Lataa {{brandShortname}} aloittaaksesi oman keskustelun
 rooms_room_full_call_to_action_label=Lue lisää {{clientShortname}}ista »
 rooms_room_joined_label=Joku on liittynyt keskusteluun!
-rooms_room_join_label=LIity keskusteluun
+rooms_room_join_label=Liity keskusteluun
+rooms_signout_alert=Avoimet keskustelut suljetaan
