--- a/fi/browser/chrome/browser/shellservice.properties
+++ b/fi/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = E
 setDefaultBrowserNever.label       = Älä kysy uudestaan
 setDefaultBrowserNever.accesskey   = Ä
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Oletusselain
+setDefaultBrowserMessage=%S ei ole järjestelmän oletusselain. Asetetaanko se oletusselaimeksi?
+setDefaultBrowserDontAsk=Tarkista tila aina käynnistettäessä %S.
 
 desktopBackgroundLeafNameWin=Työpöydän taustakuva.bmp
 DesktopBackgroundDownloading=Tallennetaan kuvaa…
