--- a/fi/dom/chrome/security/security.properties
+++ b/fi/dom/chrome/security/security.properties
@@ -10,6 +10,8 @@ CrossSiteRequestBlocked=Eri lähteistä tulevat pyynnöt estetty (Cross-Origin R
 InvalidSTSHeaders=Verkkosivusto määritteli virheellisen Strict-Transport-Security -otsakkeen.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders=Sivuston Public-Key-Pins -otsake on virheellinen.
+# LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig=Sivusto käyttää SHA-1 -varmennetta. On suositeltua käyttää varmenteita, joiden allekirjoitusalgoritmit käyttävät SHA-1:ä vahvempia tiivistefunktioita.
 InsecurePasswordsPresentOnPage=Salasanakenttiä suojaamattomalla (http://) sivulla. Tämä on turvallisuusriski, jonka avulla käyttäjän kirjautumistiedot voidaan varastaa.
 InsecureFormActionPasswordsPresent=Salasanakenttiä lomakkeessa suojaamattoman (http://) lomaketoiminnon yhteydessä. Tämä on turvallisuusriski, jonka avulla käyttäjän kirjautumistiedot voidaan varastaa.
 InsecurePasswordsPresentOnIframe=Salasanakenttiä suojaamattomassa (http://) iframessa. Tämä on turvallisuusriski, jonka avulla käyttäjän kirjautumistiedot voidaan varastaa.
