--- a/fi/security/manager/chrome/pipnss/nsserrors.properties
+++ b/fi/security/manager/chrome/pipnss/nsserrors.properties
@@ -314,3 +314,4 @@ SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Varmenne oli allekirjoitettu allekir
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Palvelin käyttää avaimen lukkolistaa (HPKP), mutta yhtäkään luotettua ja lukkolistan mukaista varmenneketjua ei voitu luoda. Lukkolistarikkeitä ei voida ohittaa.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Palvelin käyttää tavallista rajoitelaajennusvarmennetta, joka tunnistaa sen varmentajaksi. Asianmukaisella varmenteella näin ei pitäisi olla.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Palvelimen tarjoaman varmenteen avaimen koko on liian pieni suojatun yhteyden luomiseksi.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=X.509 versio 1 -varmenne, joka ei ole luotettu ankkuri, käytettiin palvelimen varmenteen allekirjoittamiseen. X.509 versio 1 -varmenteet ovat vanhentuneita, eikä niitä pitäisi käyttää muiden varmenteiden allekirjoittamiseen.
