--- a/fi/security/manager/chrome/pippki/pippki.properties
+++ b/fi/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,14 @@ pageInfo_NoEncryption=Yhteys ei ole salattu
 pageInfo_Privacy_None1=Palvelin %S ei käytä salausta tällä sivulla.
 pageInfo_Privacy_None2=Sivulliset voivat lukea verkossa salaamatta siirrettyjä tietoja.
 pageInfo_Privacy_None3=Tätä sivua ei ole salattu.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Yhteys salattu: korkeatasoinen salaus (%S, %S-bittinen avain)
-pageInfo_Privacy_Strong1=Tämä sivu salattiin ennen sen siirtoa.
-pageInfo_Privacy_Strong2=Salauksen vuoksi asiattomien on hyvin vaikea tarkastella tietokoneiden välillä siirtyvää tietoa. Siksi on hyvin epätodennäköistä, että kukaan lukisi tätä sivua, kun se siirretään verkkoa pitkin.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Yhteys salattu: heikkotasoinen salaus (%S, %S-bittinen avain)
-pageInfo_Privacy_Weak1=Palvelin %S käyttää heikkotasoista salausta tarkastelemallasi sivulla.
-pageInfo_Privacy_Weak2=Heikkotasoisen salauksen vuoksi jotkin asiattomat henkilöt saattavat nähdä tämän tiedon.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Yhteys salattu (%1$S, %2$S-bittinen avain, %3$S)
+pageInfo_Privacy_Encrypted1=Tämä sivu salattiin ennen sen siirtoa.
+pageInfo_Privacy_Encrypted2=Salauksen vuoksi asiattomien on hyvin vaikea tarkastella tietokoneiden välillä siirtyvää tietoa. Siksi on epätodennäköistä, että kukaan luki tätä sivua sen siirtyessä verkon yli.
 pageInfo_MixedContent=Yhteys osittain salattu
-pageInfo_Privacy_Mixed1=Osia avatusta sivusta ei salattu ennen siirtämistä verkon yli.
+pageInfo_Privacy_Broken1=Osia avatusta sivusta ei salattu ennen sen siirtoa tai salaus on heikko.
 
 #Cert Viewer
 certDetails=Tarkastele varmennetta: 
@@ -151,17 +147,17 @@ writeFileUnknownError=Tuntematon virhe
 addExceptionBrandedWarning2=Olet muuttamassa %Sin tapaa tunnistaa tätä sivustoa.
 addExceptionInvalidHeader=Sivusto yrittää tunnistaa itseään virheellisillä tiedoilla.
 addExceptionDomainMismatchShort=Väärä sivusto
-addExceptionDomainMismatchLong=Varmenne kuuluu toiselle sivustolle. Tämä voi olla merkkinä identiteettivarkaudesta.
+addExceptionDomainMismatchLong2=Varmenne kuuluu toiselle sivustolle. Tämä voi olla tarkoittaa, että joku yrittää tekeytyä sivustoksi
 addExceptionExpiredShort=Vanhentunutta tietoa
-addExceptionExpiredLong=Varmenne ei ole tällä hetkellä voimassa. Ei ole mahdollista tarkistaa, onko identiteettiä ilmoitettu varastetuksi tai kadonneeksi.
+addExceptionExpiredLong2=Varmenne ei ole tällä hetkellä voimassa. Se on voinut hävitä tai se on voitu varastaa, ja joku voi käyttää sitä tekeytyäkseen täksi sivustoksi.
 addExceptionUnverifiedOrBadSignatureShort=Tuntematon identiteetti
-addExceptionUnverifiedOrBadSignatureLong=Varmenteeseen ei luoteta, koska yksikään tunnistettu varmentaja ei todenna sitä suojatulla allekirjoituksella.
+addExceptionUnverifiedOrBadSignatureLong2=Varmenteeseen ei luoteta, koska yksikään luotettu varmentaja ei todenna sitä suojatulla allekirjoituksella.
 addExceptionValidShort=Voimassa oleva varmenne
 addExceptionValidLong=Sivustoon on liitetty todennettu, voimassa oleva identiteetti. Ei ole syytä asettaa poikkeusta.
 addExceptionCheckingShort=Tarkistetaan tietoja
-addExceptionCheckingLong=Yritetään tunnistaa sivustoa…
+addExceptionCheckingLong2=Yritetään tunnistaa sivustoa…
 addExceptionNoCertShort=Tietoja ei ole saatavilla
-addExceptionNoCertLong=Identiteettitilaa ei ollut saatavilla sivustolle
+addExceptionNoCertLong2=Tunnistustietoja ei ollut saatavilla sivustolle.
 addExceptionConnectionFailed=Yhteys epäonnistui
 
 #Certificate Exists in database
