--- a/fi/toolkit/chrome/global/aboutSupport.properties
+++ b/fi/toolkit/chrome/global/aboutSupport.properties
@@ -82,3 +82,7 @@ webglRenderer = WebGL-mallintaja
 
 minLibVersions = Odotettu minimiversio
 loadedLibVersions = Käytössä oleva versio
+
+hasSeccompBPF = Seccomp-BPF (Järjestelmäkutsujen suodatus)
+canSandboxContent = Sisältöprosessin suorittaminen hiekkalaatikossa
+canSandboxMedia = Medialiitännäisen suorittaminen hiekkalaatikossa
