--- a/fi/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fi/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -10,7 +10,7 @@ privatebrowsing-button.label = Uusi yksityinen ikkuna
 # LOCALIZATION NOTE(privatebrowsing-button.tooltiptext): %S is the keyboard shortcut
 privatebrowsing-button.tooltiptext = Avaa yksityinen selaaminen -ikkuna (%S)
 
-save-page-button.label = Save Page
+save-page-button.label = Tallenna sivu
 # LOCALIZATION NOTE(save-page-button.tooltiptext3): %S is the keyboard shortcut
 save-page-button.tooltiptext3 = Tallenna avoin sivu (%S)
 
@@ -97,11 +97,13 @@ quit-button.tooltiptext.linux2 = Sulje %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Sulje %1$S (%2$S)
 
-loop-call-button2.label = Aloita keskustelu
-loop-call-button2.tooltiptext = Aloita keskustelu
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Aloita keskustelu
 
 social-share-button.label = Jaa sivu
-social-share-button.tooltiptext = Jaa sivu
+social-share-button.tooltiptext = Jaa tämä sivu
 
 panic-button.label = Unohda
 panic-button.tooltiptext = Unohda jonkin verran selaushistoriaa
@@ -111,5 +113,6 @@ web-apps-button.tooltiptext = Löydä sovelluksia
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Open WebIDE
+# %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Avaa WebIDE (%S)
