--- a/fi/toolkit/chrome/global/aboutTelemetry.properties
+++ b/fi/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Tällä sivulla näet Kaukomittaus-toiminnallisuuden keräämät tiedot suorituskyvystä ja ominaisuuksien käyttöuseudesta. Sivulla näkyvät tiedot lähetetään %1$Slle auttamaan %2$Sin kehityksessä.
 
+generalDataHeadingName = Nimi
+
+generalDataHeadingValue = Arvo
+
 slowSqlMain = Hitaat SQL-lauseet pääsäikeessä
 
 slowSqlOther = Hitaat SQL-lauseet apusäikeissä
