--- a/fi/webapprt/webapprt/overrides/appstrings.properties
+++ b/fi/webapprt/webapprt/overrides/appstrings.properties
@@ -30,6 +30,6 @@ externalProtocolChkMsg=Tee aina näin vastaaville linkeille.
 externalProtocolLaunchBtn=Käynnistä ohjelma
 malwareBlocked=Sivuston %S on ilmoitettu olevan hyökkäyssivusto ja sen avaaminen on estetty turvallisuusasetuksiesi perusteella.
 phishingBlocked=Sivuston %S on ilmoitettu olevan huijaussivusto, jonka tarkoituksena on saada käyttäjät luovuttamaan henkilö- tai pankkitietojaan.
-cspFrameAncestorBlocked=Tämä sovellus yritti avata sisältöä, jolla on tietosuojakäytäntö joka estää sen sisällyttämiseen tällä tavalla.
+cspBlocked=Tämä sovellus yritti avata sisältöä, jolla on tietosuojakäytäntö joka estää sen sisällyttämiseen tällä tavalla.
 corruptedContentError=Sovellusta ei voida ladata, koska tiedonsiirrossa tapahtui virhe.
 remoteXUL=Tämä sovellus käyttää teknologiaa, jota ei enää oletuksena tueta.
