--- a/fi/mobile/overrides/appstrings.properties
+++ b/fi/mobile/overrides/appstrings.properties
@@ -31,6 +31,6 @@ externalProtocolChkMsg=Tee aina näin vastaaville linkeille.
 externalProtocolLaunchBtn=Käynnistä ohjelma
 malwareBlocked=Sivuston %S on ilmoitettu olevan hyökkäyssivusto ja sen avaaminen on estetty turvallisuusasetuksiesi perusteella.
 phishingBlocked=Sivuston %S on ilmoitettu olevan huijaussivusto, jonka tarkoituksena on saada käyttäjät luovuttamaan henkilö- tai pankkitietojaan.
-cspFrameAncestorBlocked=Tällä sivulla on sisällön turvallisuuskäytöntä, joka estää sen upottamisen tehdyllä tavalla.
+cspBlocked=Tällä sivulla on sisällön turvallisuuskäytöntä, joka estää sen upottamisen tehdyllä tavalla.
 corruptedContentError=Avattavaa sivua ei voida näyttää, koska tiedonsiirrossa tapahtui virhe.
 remoteXUL=Tämä sivu käyttää teknologiaa, jota Firefox ei enää oletuksena tue.
