[ca] update from Pootle (firefox)

--- a/ca/browser/chrome/browser/devtools/webide.properties
+++ b/ca/browser/chrome/browser/devtools/webide.properties
@@ -20,6 +20,7 @@ importHostedApp_title=Obre una aplicació hostatjada
 importHostedApp_header=Escriviu l'URL de manifest
 
 notification_showTroubleShooting_label=Resolució de problemes
+notification_showTroubleShooting_accesskey=R
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
@@ -41,6 +42,7 @@ error_cantConnectToApp=No es pot connectar a l'aplicació: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=No es pot obtenir la llista de complements: %S
 
+error_appProjectsLoadFailed=No s'ha pogut carregar la llista de projectes. Això pot passar si heu utilitzat aquest perfil amb una versió més nova del Firefox.
 
 addons_stable=estable
 addons_unstable=inestable
@@ -52,6 +54,7 @@ addons_simulator_label=Simulador del Firefox OS %1$S (%2$S)
 addons_install_button=instal·la
 addons_uninstall_button=desinstal·la
 addons_adb_label=Complement ADB Helper
+addons_adapters_label=Complement d'adaptadors d'eines
 addons_adb_warning=Els dispositius USB no es detectaran sense aquest complement
 addons_status_unknown=?
 addons_status_installed=Instal·lat
@@ -73,3 +76,4 @@ status_error=ERRORS
 status_unknown=DESCONEGUT
 
 # Preferences
+devicepreferences_reset_default=Reinicia als valors per defecte
