--- a/ca/browser/chrome/browser/loop/loop.properties
+++ b/ca/browser/chrome/browser/loop/loop.properties
@@ -46,6 +46,7 @@ display_name_available_status=Disponible
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+unable_retrieve_url=No s'ha pogut recuperar un URL de trucada.
 session_expired_error_description=La sessió ha caducat. Ja no funcionarà cap dels URL que hàgiu creat i compartit prèviament.
 could_not_authenticate=No s'ha pogut autenticar
 password_changed_question=Heu canviat la contrasenya?
@@ -97,6 +98,7 @@ new_contact_button=Contacte nou
 new_contact_name_placeholder=Nom
 new_contact_email_placeholder=Correu electrònic
 new_contact_fxos_phone_placeholder=Telèfon Firefox OS
+new_contact_phone_placeholder2=Telèfon
 
 contacts_blocked_contacts=Contactes blocats
 
@@ -126,6 +128,8 @@ sync_contacts_button=Sincronitza els contactes
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Ha fallat la importació de contactes
+import_failed_description_some=No s'han pogut importar alguns contactes
+import_failed_support_button=Ajuda
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -283,6 +287,7 @@ feedback_rejoin_button=Torna a unir-m'hi
 ## an abusive user.
 feedback_report_user_button=Denuncia l'usuari
 
+help_label=Ajuda
 tour_label=Visita guiada
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
@@ -300,6 +305,7 @@ rooms_list_delete_tooltip=Suprimeix la conversa
 rooms_list_deleteConfirmation_label=N'esteu segur?
 rooms_list_no_current_conversations=Ara mateix no hi ha cap conversa
 rooms_name_this_room_label=Anomena aquesta conversa
+rooms_name_this_room_tooltip2=Feu clic aquí per editar el nom de la conversa
 rooms_new_room_button_label=Inicia una conversa
 rooms_only_occupant_label=Sou el primer participant.
 rooms_panel_title=Trieu una conversa o comenceu-ne una nova
