--- a/ca/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ca/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,7 +99,11 @@ quit-button.tooltiptext.mac = Surt del %1$S (%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Inicia una conversa
 
+social-share-button.label = Comparteix aquesta pàgina
+social-share-button.tooltiptext = Comparteix aquesta pàgina
 
 panic-button.label = Forget
 panic-button.tooltiptext = Forget about some browsing history
@@ -111,3 +115,4 @@ web-apps-button.tooltiptext = Descobreix aplicacions
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
 devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Obre el WebIDE (%S)
