[ca] update from Pootle (firefox)

--- a/ca/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ca/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -105,8 +105,8 @@ loop-call-button3.tooltiptext = Inicia una conversa
 social-share-button.label = Comparteix aquesta pàgina
 social-share-button.tooltiptext = Comparteix aquesta pàgina
 
-panic-button.label = Forget
-panic-button.tooltiptext = Forget about some browsing history
+panic-button.label = Oblida
+panic-button.tooltiptext = Oblida part de l'historial de navegació
 
 web-apps-button.label = Aplicacions
 web-apps-button.tooltiptext = Descobreix aplicacions
