--- a/ca/browser/chrome/browser/loop/loop.properties
+++ b/ca/browser/chrome/browser/loop/loop.properties
@@ -306,6 +306,7 @@ rooms_list_deleteConfirmation_label=N'esteu segur?
 rooms_list_no_current_conversations=Ara mateix no hi ha cap conversa
 rooms_name_this_room_label=Anomena aquesta conversa
 rooms_name_this_room_tooltip2=Feu clic aquí per editar el nom de la conversa
+rooms_name_change_failed_label=No es pot canviar el nom de la conversa
 rooms_new_room_button_label=Inicia una conversa
 rooms_only_occupant_label=Sou el primer participant.
 rooms_panel_title=Trieu una conversa o comenceu-ne una nova
@@ -314,3 +315,4 @@ rooms_room_full_call_to_action_nonFx_label=Baixeu el {{brandShortname}} per inic
 rooms_room_full_call_to_action_label=Més informació sobre el {{clientShortname}} »
 rooms_room_joined_label=Algú s'ha unit a la conversa.
 rooms_room_join_label=Uniu-vos a la conversa
+rooms_signout_alert=Les converses obertes es tancaran
