--- a/ca/dom/chrome/dom/dom.properties
+++ b/ca/dom/chrome/dom/dom.properties
@@ -210,3 +210,4 @@ KeyNameDeadKeysWarning=Els valors de KeyboardEvent.key que comencen per «Dead»
 ImportXULIntoContentWarning=La importació de nodes XUL en un document de contingut està en desús. Aquesta funcionalitat s'eliminarà aviat.
 XMLDocumentLoadPrincipalMismatch=No es pot utilitzar document.load en documents que provenen d'altres finestres. Només la finestra en la qual s'ha creat el document pot cridar .load per al document. Preferiblement, utilitzeu XMLHttpRequest.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
+IndexedDBTransactionAbortNavigation=Una transacció IndexedDB que encara no havia acabat s'ha anul·lat a causa de la navegació de pàgina.
