--- a/ca/dom/chrome/layout/css.properties
+++ b/ca/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=saturació
 PEColorLightnessEOF=claror
 PEColorOpacityEOF=opacitat en el valor de color
 PEExpectedNumber=S'esperava un nombre, però s'ha trobat «%1$S».
+PEPositionEOF=<position>
+PEExpectedPosition=S'esperava <position>, però s'ha trobat «%1$S».
+PEExpectedRadius=S'esperava un radi, però s'ha trobat «%1$S».
 PEExpectedCloseParen=S'esperava «)», però s'ha trobat «%1$S».
 PEDeclEndEOF=«;» o «}» per acabar la declaració
 PEParseDeclarationNoColon=S'esperava «:», però s'ha trobat «%1$S».
