--- a/ca/security/manager/chrome/pipnss/nsserrors.properties
+++ b/ca/security/manager/chrome/pipnss/nsserrors.properties
@@ -314,3 +314,4 @@ SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=El certificat s'ha signat amb un alg
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=El servidor utilitza la fixació de claus (HPKP) però no s'ha pogut construir cap cadena de certificat que coincideixi amb el conjunt de claus fixes. Les infraccions de fixació de claus no es poden ometre.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=El servidor utilitza un certificat amb una extensió de restriccions bàsiques que l'identifica com a entitat certificadora. Això no hauria de passar amb un certificat que s'hagi emès correctament.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=El servidor ha presentat un certificar que té una mida de clau massa petita per establir una connexió segura.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=S'ha utilitzat un certificat X.509 versió 1 que no és una àncora de confiança per emetre el certificat del servidor. Els certificats X.509 versió 1 són obsolets i no s'haurien d'utilitzar per signar altres certificats.
