--- a/ca/security/manager/chrome/pippki/pippki.properties
+++ b/ca/security/manager/chrome/pippki/pippki.properties
@@ -76,8 +76,11 @@ pageInfo_Privacy_None3=La pàgina que esteu visualitzant no està xifrada.
 # LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Connexió xifrada (%1$S, claus de %2$S bits, %3$S)
 pageInfo_Privacy_Encrypted1=La pàgina que esteu visualitzant s'ha xifrat abans de transmetre-la per Internet.
+pageInfo_Privacy_Encrypted2=El xifratge fa difícil que persones no autoritzades puguin visualitzar la informació que viatja entre ordinadors. Per tant, és improbable que algú hagi llegit aquesta pàgina mentre circulava per la xarxa.
 pageInfo_MixedContent=Connexió xifrada parcialment
+pageInfo_Privacy_Broken1=Algunes parts de la pàgina que esteu veient no s'han xifrat abans de transmetre-les per Internet o bé el xifratge no és prou potent.
 
 #Cert Viewer
 certDetails=Visualitzador de certificats:
@@ -144,12 +147,17 @@ writeFileUnknownError=Error desconegut
 addExceptionBrandedWarning2=Esteu a punt de sobreescriure com el %S identifica aquest lloc.
 addExceptionInvalidHeader=Aquest lloc intenta identificar-se amb informació que no és vàlida.
 addExceptionDomainMismatchShort=Lloc web incorrecte
+addExceptionDomainMismatchLong2=El certificat pertany a un altre lloc diferent; això pot voler dir que algú està intentant suplantar aquest lloc.
 addExceptionExpiredShort=Informació obsoleta
+addExceptionExpiredLong2=El certificat actualment no és vàlid. Podria ser que l'hagin robat o s'hagi perdut i algú l'estigués utilitzant per suplantar aquest lloc.\u0020
 addExceptionUnverifiedOrBadSignatureShort=Identitat desconeguda
+addExceptionUnverifiedOrBadSignatureLong2=No es confia en el certificat perquè no l'ha verificat una autoritat de confiança mitjançant una signatura segura.
 addExceptionValidShort=Certificat vàlid
 addExceptionValidLong=El lloc web proporciona identificació vàlida i verificada. No cal afegir cap excepció.
 addExceptionCheckingShort=Comprovació de la informació
+addExceptionCheckingLong2=S'està intentant identificar aquest lloc web…
 addExceptionNoCertShort=No hi ha cap informació disponible
+addExceptionNoCertLong2=No es pot obtenir l'estat d'identificació d'aquest lloc web.
 addExceptionConnectionFailed=Ha fallat la connexió
 
 #Certificate Exists in database
