--- a/ca/toolkit/chrome/global/aboutTelemetry.properties
+++ b/ca/toolkit/chrome/global/aboutTelemetry.properties
@@ -9,6 +9,7 @@ pageSubtitle = Aquesta pàgina conté la informació del rendiment, ús i person
 
 generalDataHeadingName = Nom
 
+generalDataHeadingValue = Valor
 
 slowSqlMain = Sentències SQL lentes en el fil principal
 
@@ -49,6 +50,7 @@ enableTelemetry = Habilita la telemesura
 
 keysHeader = Propietat
 
+valuesHeader = Valor
 
 addonTableID = ID del complement
 
