--- a/ca/toolkit/chrome/global/aboutSupport.properties
+++ b/ca/toolkit/chrome/global/aboutSupport.properties
@@ -83,3 +83,6 @@ webglRenderer = Motor WebGL
 minLibVersions = Versió mínima esperada
 loadedLibVersions = Versió en ús
 
+hasSeccompBPF = Seccomp-BPF (filtratge de crides del sistema)
+canSandboxContent = Inclou en l'entorn de proves el procés del contingut
+canSandboxMedia = Inclou en l'entorn de proves els connectors multimèdia
