--- a/ca/browser/chrome/browser/devtools/timeline.properties
+++ b/ca/browser/chrome/browser/devtools/timeline.properties
@@ -38,6 +38,7 @@ timeline.records=REGISTRES
 timeline.label.styles=Estils
 timeline.label.reflow=Reajustament
 timeline.label.paint=Àrea actualitzada
+timeline.label.javascript=Javascript
 timeline.label.domevent=Esdeveniment DOM
 timeline.label.consoleTime=Consola
 
@@ -56,3 +57,11 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # LOCALIZATION NOTE (time.markerDetail.*):
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=Inici:
+timeline.markerDetail.end=Fi:
+timeline.markerDetail.duration=Durada:
+timeline.markerDetail.consoleTimerName=Nom del temporitzador:
+timeline.markerDetail.DOMEventType=Tipus d'esdeveniment:
+timeline.markerDetail.DOMEventPhase=Fase:
+timeline.markerDetail.DOMEventTargetPhase=Destí
+timeline.markerDetail.DOMEventCapturingPhase=Captura
+timeline.markerDetail.DOMEventBubblingPhase=En bombolla
