--- a/ca/browser/chrome/browser/shellservice.properties
+++ b/ca/browser/chrome/browser/shellservice.properties
@@ -20,6 +20,9 @@ setDefaultBrowserNever.accesskey   = d
 # LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
 # These strings are used as an alternative to the ones above, in a modal dialog.
 # %S will be replaced by brandShortName
+setDefaultBrowserTitle=Navegador per defecte
+setDefaultBrowserMessage=Actualment el %S no és el vostre navegador per defecte. Voleu fer que ho sigui?
+setDefaultBrowserDontAsk=Comprova-ho sempre quan s'inicia el %S.
 
 desktopBackgroundLeafNameWin=Fons escriptori.bmp
 DesktopBackgroundDownloading=S'està desant la imatge…
