[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/pt-BR/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -41,7 +41,7 @@ unableToOpenTmpFile=Não foi possível abrir o arquivo temporário %S. Verifique
 12517=Resposta do servidor: "%s".\nPor favor verifique a mensagem e tente novamente.
 
 ## @name NS_ERROR_POST_FAILED
-12518=A mensagem não pôde ser postada porque houve falha na conexão ao servidor de news. O servidor pode estar indisponível ou recusando conexões. Por favor verifique se suas configurações de news estão corretas e tente de novo ou contate o administrador da rede.
+12518=A mensagem não pôde ser postada porque houve falha na conexão ao servidor de notícias. O servidor pode estar indisponível ou recusando conexões. Por favor verifique se suas configurações de notícias estão corretas e tente de novo ou contate o administrador da rede.
 
 ## @name NS_ERROR_QUEUED_DELIVERY_FAILED
 12519=Um erro ocorreu durante a entrega de mensagens.
@@ -87,7 +87,7 @@ unableToOpenTmpFile=Não foi possível abrir o arquivo temporário %S. Verifique
 ## @name NS_MSG_ERROR_READING_FILE
 12563=Erro ao ler arquivo.
 
-followupToSenderMessage=O autor desta mensagem solicitou que respostas sejam enviadas somente para ele. Se quiser responder ao newsgroup, adicione uma nova linha no campo de endereçamento, selecione “Newsgroup” na lista de destinatários e forneça o nome do newsgroup.
+followupToSenderMessage=O autor desta mensagem solicitou que respostas sejam enviadas somente para ele. Se quiser responder ao grupo de notícias, adicione uma nova linha no campo de endereçamento, selecione “Grupo de notícias” na lista de destinatários e forneça o nome do grupo de notícias.
 
 ## @name NS_MSG_ERROR_ATTACHING_FILE
 ## LOCALIZATION NOTE (12570): argument %S is file name/URI of object to be attached
