--- a/pt-BR/suite/chrome/mailnews/messenger.properties
+++ b/pt-BR/suite/chrome/mailnews/messenger.properties
@@ -53,7 +53,7 @@ saveAttachmentFailed=Não foi possível salvar o anexo. Por favor verifique o no
 saveMessageFailed=Não foi possível salvar a mensagem. Por favor verifique o nome do arquivo e tente novamente.
 fileExists=%S já existe. Você quer substituí-lo?
 
-downloadingNewsgroups=Recebendo newsgroups para leitura em modo desconectado
+downloadingNewsgroups=Recebendo grupos de notícias para leitura em modo desconectado
 downloadingMail=Recebendo as mensagens para leitura em modo desconectado...
 sendingUnsent=Enviando mensagens da pasta "Saída"
 
@@ -126,7 +126,7 @@ authAnySecure=Qualquer método seguro (desaconselhado)
 authAny=Qualquer método (inseguro)
 
 # LOCALIZATION NOTE(serverType-nntp): Do not translate "NNTP" in the line below
-serverType-nntp=Servidor de news (NNTP)
+serverType-nntp=Servidor de notícias (NNTP)
 # LOCALIZATION NOTE(serverType-pop3): Do not translate "POP" in the line below
 serverType-pop3=Servidor de email POP
 # LOCALIZATION NOTE(serverType-imap): Do not translate "IMAP" in the line below
@@ -284,7 +284,7 @@ mailnews.account_central_page.url=chrome://messenger/content/msgAccountCentral.x
 # LOCALIZATION NOTE(acctCentralTitleFormat): %1$S is brand, %2$S is account type, %3$S is account name
 acctCentralTitleFormat=%1$S %2$S - %3$S
 mailAcctType=Mail
-newsAcctType=News
+newsAcctType=Notícias
 feedsAcctType=RSS
 
 # LOCALIZATION NOTE(nocachedbodytitle): Do not translate "<TITLE>" or "</TITLE>" in the line below
