--- a/pt-BR/suite/chrome/mailnews/mime.properties
+++ b/pt-BR/suite/chrome/mailnews/mime.properties
@@ -81,7 +81,7 @@
 # Newsgroups
 ## @name MIME_MHTML_NEWSGROUPS
 ## @loc 
-1014=Newsgroup
+1014=Grupos de notícias
 
 # Followup-To
 ## @name MIME_MHTML_FOLLOWUP_TO
