--- a/pt-BR/suite/chrome/mailnews/news.properties
+++ b/pt-BR/suite/chrome/mailnews/news.properties
@@ -2,17 +2,17 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 downloadHeadersTitlePrefix=Baixar cabeçalhos
-downloadHeadersInfoText=Há %S novos cabeçalhos de mensagens para baixar deste newsgroup.
+downloadHeadersInfoText=Há %S novos cabeçalhos de mensagens para baixar deste grupo de notícias.
 htmlNewsErrorTitle=Erro!
 # LOCALIZATION NOTE ( htmlNewsError ): In the following item, translate only "Error!" and "newsgroup server responded:"
-htmlNewsError=<H1>Erro!</H1>Resposta do servidor de news:
+htmlNewsError=<H1>Erro!</H1>Resposta do servidor de grupo de notícias:\u0020
 # LOCALIZATION NOTE ( articleExpired ): In the following item, translate only "Perhaps the article has expired"
 articleExpired=<B><P>Talvez o artigo tenha perdido a validade</P></B>
 removeExpiredArtLinkText=Clique aqui para excluir todos os artigos fora da validade
 cancelDisallowed=Esta mensagem não aparenta ser sua. Você pode cancelar suas mensagens, mas não aquelas enviadas por outros.
 cancelConfirm=Você confirma o cancelamento desta mensagem?
 messageCancelled=Mensagem cancelada.
-enterUserPassTitle=Solicitado nome de usuário e senha do servidor de news
+enterUserPassTitle=Solicitado nome de usuário e senha do servidor de notícias
 # LOCALIZATION NOTE (enterUserPassServer): %S is the server being accessed
 enterUserPassServer=Por favor digite o nome de usuário e a senha para %S:
 # LOCALIZATION NOTE (enterUserPassGroup): %1$S is a specific newsgroup to set
@@ -31,11 +31,11 @@ newNewsgroupHeaders=Baixando %1$S de %2$S cabeçalhos em %3$S
 # newsgroup whose headers are being downloaded.
 newNewsgroupFilteringHeaders=Obtendo cabeçalhos para filtros: %1$S (%2$S/%3$S) em %4$S
 downloadingArticles=Recebendo o artigo %S/%S...
-bytesReceived=Recebendo os newsgroups: %S recebidos (%SK lidos em %SKB/s)
+bytesReceived=Recebendo os grupos de notícias: %S recebidos (%SK lidos em %SKB/s)
 downloadingArticlesForOffline=Recebendo o artigo %S/%S em %S...
 
 # LOCALIZATION NOTE (autoUnsubscribeText): %1$S is the newsgroup and %2$S is the newsgroup-server it is being removed from.
-autoUnsubscribeText=O newsgroup %1$S aparentemente não existe no servidor %2$S. Gostaria de cancelar a inscrição dele?
+autoUnsubscribeText=O grupo de notícias %1$S aparentemente não existe no servidor %2$S.  Gostaria de cancelar a inscrição dele?
 
 # LOCALIZATION NOTE (autoSubscribeText): %1$S is the newsgroup.
 autoSubscribeText=Deseja inscrever-se em %1$S?
