[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/mailnews/news.properties
+++ b/pt-BR/suite/chrome/mailnews/news.properties
@@ -44,12 +44,12 @@ autoSubscribeText=Deseja inscrever-se em %1$S?
 # Error - server error
 ## @name NNTP_ERROR_MESSAGE
 ## @loc None
--304=Um erro de news (NNTP) ocorreu:
+-304=Um erro de grupo de notícias (NNTP) ocorreu: \u0020
 
 # Error - newsgroup scan error
 ## @name NNTP_NEWSGROUP_SCAN_ERROR
 ## @loc None
--305=Ocorreu um erro de news. O mapeamento de todos os newsgroups está incompleto. Tente exibir todos os newsgroups novamente.
+-305=Ocorreu um erro de grupos de notícias.  O mapeamento de todos os grupos de notícias está incompleto.  Tente exibir todos os grupos de notícias novamente.
 
 # Error - NNTP authinfo failure
 ## @name NNTP_AUTH_FAILED
